@@ -21,9 +21,7 @@ import io.sirix.page.HOTIndirectPage;
 import io.sirix.page.PageReference;
 import io.sirix.service.json.shredder.JsonShredder;
 import io.sirix.settings.VersioningType;
-import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -47,32 +45,15 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 /**
  * Stress tests targeting HOT production-readiness gaps:
  * <ul>
- *   <li>Delete at scale (10K+ tombstones)</li>
- *   <li>Multi-revision isolation with concurrent deletes and reads</li>
- *   <li>Database restart with HOT indexes across versioning strategies</li>
- *   <li>Fragment chain integrity under heavy mutation</li>
- *   <li>Oracle-verified correctness through insert/delete/reinsert cycles</li>
+ * <li>Delete at scale (10K+ tombstones)</li>
+ * <li>Multi-revision isolation with concurrent deletes and reads</li>
+ * <li>Database restart with HOT indexes across versioning strategies</li>
+ * <li>Fragment chain integrity under heavy mutation</li>
+ * <li>Oracle-verified correctness through insert/delete/reinsert cycles</li>
  * </ul>
  */
 @DisplayName("HOT versioned leaf stress tests")
 final class HOTVersionedLeafStressTest {
-
-  private static String originalHOTSetting;
-
-  @BeforeAll
-  static void enableHOT() {
-    originalHOTSetting = System.getProperty("sirix.index.useHOT");
-    System.setProperty("sirix.index.useHOT", "true");
-  }
-
-  @AfterAll
-  static void restoreHOT() {
-    if (originalHOTSetting != null) {
-      System.setProperty("sirix.index.useHOT", originalHOTSetting);
-    } else {
-      System.clearProperty("sirix.index.useHOT");
-    }
-  }
 
   private Path tempDir;
 
@@ -125,22 +106,21 @@ final class HOTVersionedLeafStressTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(dbPath));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
-        database.createResource(ResourceConfiguration.newBuilder("res")
-            .versioningApproach(VersioningType.DIFFERENTIAL).build());
+        database.createResource(
+            ResourceConfiguration.newBuilder("res").versioningApproach(VersioningType.DIFFERENTIAL).build());
 
         try (JsonResourceSession session = database.beginResourceSession("res");
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           // Create CAS index
           final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-          final var pathToValue = io.brackit.query.util.path.Path.parse(
-              "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-          final IndexDef def = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+          final var pathToValue =
+              io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+          final IndexDef def =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
           ic.createIndexes(Set.of(def), wtx);
 
           // Rev 1: insert N entries
-          wtx.insertSubtreeAsFirstChild(
-              JsonShredder.createStringReader(buildCasArray(n, i -> i)),
+          wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(n, i -> i)),
               JsonNodeTrx.Commit.NO);
           wtx.commit();
           assertNoViolations(wtx, IndexType.CAS, def.getID(), "rev1");
@@ -153,8 +133,7 @@ final class HOTVersionedLeafStressTest {
           wtx.commit();
 
           // Rev 3: reinsert fewer entries with different values
-          wtx.insertSubtreeAsFirstChild(
-              JsonShredder.createStringReader(buildCasArray(reinsert, i -> i + n)),
+          wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(reinsert, i -> i + n)),
               JsonNodeTrx.Commit.NO);
           wtx.commit();
           assertNoViolations(wtx, IndexType.CAS, def.getID(), "rev3");
@@ -165,7 +144,7 @@ final class HOTVersionedLeafStressTest {
 
         // Verify rev 1 still readable
         try (JsonResourceSession session = database.beginResourceSession("res");
-             JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(1)) {
+            JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(1)) {
           assertNoViolations(rtx, IndexType.CAS, 0, "rev1-after-reinsert");
         }
       }
@@ -186,18 +165,18 @@ final class HOTVersionedLeafStressTest {
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
         database.createResource(ResourceConfiguration.newBuilder("res")
-            .versioningApproach(VersioningType.SLIDING_SNAPSHOT)
-            .maxNumberOfRevisionsToRestore(5).build());
+                                                     .versioningApproach(VersioningType.SLIDING_SNAPSHOT)
+                                                     .maxNumberOfRevisionsToRestore(5)
+                                                     .build());
 
         IndexDef def;
         try (JsonResourceSession session = database.beginResourceSession("res");
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           // Create index
           final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-          final var pathToValue = io.brackit.query.util.path.Path.parse(
-              "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-          def = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+          final var pathToValue =
+              io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+          def = IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
           ic.createIndexes(Set.of(def), wtx);
 
           // Rev 1: bootstrap
@@ -206,8 +185,7 @@ final class HOTVersionedLeafStressTest {
             for (int i = 0; i < entriesPerRev; i++) {
               oracle.merge(i, 1, Integer::sum);
             }
-            wtx.insertSubtreeAsFirstChild(
-                JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> i)),
+            wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> i)),
                 JsonNodeTrx.Commit.NO);
             wtx.commit();
             oracleAtRev.add(oracle);
@@ -226,8 +204,7 @@ final class HOTVersionedLeafStressTest {
               values[i] = offset + rng.nextInt(entriesPerRev * 2);
               oracle.merge(values[i], 1, Integer::sum);
             }
-            wtx.insertSubtreeAsFirstChild(
-                JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> values[i])),
+            wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> values[i])),
                 JsonNodeTrx.Commit.NO);
             wtx.commit();
             oracleAtRev.add(oracle);
@@ -238,8 +215,7 @@ final class HOTVersionedLeafStressTest {
         try (JsonResourceSession session = database.beginResourceSession("res")) {
           for (int rev = 1; rev <= totalRevs; rev++) {
             try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(rev)) {
-              assertNoViolations(rtx, IndexType.CAS, 0,
-                  "interleaved-rev" + rev + " (seed=" + seed + ")");
+              assertNoViolations(rtx, IndexType.CAS, 0, "interleaved-rev" + rev + " (seed=" + seed + ")");
             }
           }
 
@@ -247,18 +223,15 @@ final class HOTVersionedLeafStressTest {
           try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(totalRevs)) {
             final TreeMap<Integer, Integer> lastOracle = oracleAtRev.get(totalRevs - 1);
             final var ic = session.getRtxIndexController(rtx.getRevisionNumber());
-            final var casFilter = ic.createCASFilter(
-                Set.of("/k/[]/v"), new Int32(0), SearchMode.GREATER_OR_EQUAL,
+            final var casFilter = ic.createCASFilter(Set.of("/k/[]/v"), new Int32(0), SearchMode.GREATER_OR_EQUAL,
                 new JsonPCRCollector(rtx));
             final var iter = ic.openCASIndex(rtx.getStorageEngineReader(), def, casFilter);
             long totalActual = 0;
             while (iter.hasNext()) {
               totalActual += iter.next().getNodeKeys().getLongCardinality();
             }
-            final long totalExpected = lastOracle.values().stream()
-                .mapToInt(Integer::intValue).sum();
-            assertEquals(totalExpected, totalActual,
-                "total entry count at rev " + totalRevs + " (seed=" + seed + ")");
+            final long totalExpected = lastOracle.values().stream().mapToInt(Integer::intValue).sum();
+            assertEquals(totalExpected, totalActual, "total entry count at rev " + totalRevs + " (seed=" + seed + ")");
           }
         }
       }
@@ -279,22 +252,22 @@ final class HOTVersionedLeafStressTest {
 
         try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
           database.createResource(ResourceConfiguration.newBuilder("res")
-              .versioningApproach(VersioningType.SLIDING_SNAPSHOT)
-              .maxNumberOfRevisionsToRestore(5).build());
+                                                       .versioningApproach(VersioningType.SLIDING_SNAPSHOT)
+                                                       .maxNumberOfRevisionsToRestore(5)
+                                                       .build());
 
           IndexDef def;
           try (JsonResourceSession session = database.beginResourceSession("res");
-               JsonNodeTrx wtx = session.beginNodeTrx()) {
+              JsonNodeTrx wtx = session.beginNodeTrx()) {
             final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-            final var pathToValue = io.brackit.query.util.path.Path.parse(
-                "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-            def = IndexDefs.createCASIdxDef(false, Type.INR,
-                Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+            final var pathToValue =
+                io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+            def =
+                IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
             ic.createIndexes(Set.of(def), wtx);
 
             // Rev 1: bootstrap a dense ascending range.
-            wtx.insertSubtreeAsFirstChild(
-                JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> i)),
+            wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> i)),
                 JsonNodeTrx.Commit.NO);
             wtx.commit();
 
@@ -312,8 +285,7 @@ final class HOTVersionedLeafStressTest {
                 values[i] = offset + rng.nextInt(entriesPerRev * 2);
               }
               wtx.insertSubtreeAsFirstChild(
-                  JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> values[i])),
-                  JsonNodeTrx.Commit.NO);
+                  JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> values[i])), JsonNodeTrx.Commit.NO);
               wtx.commit();
             }
           }
@@ -322,8 +294,7 @@ final class HOTVersionedLeafStressTest {
           try (JsonResourceSession session = database.beginResourceSession("res")) {
             for (int rev = 1; rev <= totalRevs; rev++) {
               try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(rev)) {
-                assertNoViolations(rtx, IndexType.CAS, 0,
-                    "scale-fuzz seed=" + Long.toHexString(seed) + " rev=" + rev);
+                assertNoViolations(rtx, IndexType.CAS, 0, "scale-fuzz seed=" + Long.toHexString(seed) + " rev=" + rev);
               }
             }
           }
@@ -372,16 +343,17 @@ final class HOTVersionedLeafStressTest {
       // Phase 1: create multi-rev database
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
         database.createResource(ResourceConfiguration.newBuilder("res")
-            .versioningApproach(versioningType)
-            .maxNumberOfRevisionsToRestore(3).build());
+                                                     .versioningApproach(versioningType)
+                                                     .maxNumberOfRevisionsToRestore(3)
+                                                     .build());
 
         try (JsonResourceSession session = database.beginResourceSession("res");
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-          final var pathToValue = io.brackit.query.util.path.Path.parse(
-              "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-          final IndexDef def = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+          final var pathToValue =
+              io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+          final IndexDef def =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
           ic.createIndexes(Set.of(def), wtx);
 
           for (int rev = 1; rev <= totalRevs; rev++) {
@@ -393,12 +365,11 @@ final class HOTVersionedLeafStressTest {
             }
             final int offset = (rev - 1) * entriesPerRev;
             wtx.insertSubtreeAsFirstChild(
-                JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> offset + i)),
-                JsonNodeTrx.Commit.NO);
+                JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> offset + i)), JsonNodeTrx.Commit.NO);
             wtx.commit();
 
-            final HOTInvariantValidator.Result inv = HOTInvariantValidator.validateIndex(
-                wtx.getStorageEngineReader(), IndexType.CAS, def.getID());
+            final HOTInvariantValidator.Result inv =
+                HOTInvariantValidator.validateIndex(wtx.getStorageEngineReader(), IndexType.CAS, def.getID());
             revStoredCounts[rev - 1] = inv.storedKeyCount();
             inv.assertOk();
           }
@@ -411,11 +382,10 @@ final class HOTVersionedLeafStressTest {
         try (JsonResourceSession session = database.beginResourceSession("res")) {
           for (int rev = 1; rev <= totalRevs; rev++) {
             try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(rev)) {
-              final HOTInvariantValidator.Result inv = HOTInvariantValidator.validateIndex(
-                  rtx.getStorageEngineReader(), IndexType.CAS, 0);
+              final HOTInvariantValidator.Result inv =
+                  HOTInvariantValidator.validateIndex(rtx.getStorageEngineReader(), IndexType.CAS, 0);
               assertTrue(inv.violations().isEmpty(),
-                  versioningType + " rev " + rev + " violations after restart: "
-                      + inv.violations());
+                  versioningType + " rev " + rev + " violations after restart: " + inv.violations());
               assertEquals(revStoredCounts[rev - 1], inv.storedKeyCount(),
                   versioningType + " rev " + rev + " key count mismatch after restart");
             }
@@ -444,21 +414,21 @@ final class HOTVersionedLeafStressTest {
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
         database.createResource(ResourceConfiguration.newBuilder("res")
-            .versioningApproach(VersioningType.INCREMENTAL)
-            .maxNumberOfRevisionsToRestore(4).build());
+                                                     .versioningApproach(VersioningType.INCREMENTAL)
+                                                     .maxNumberOfRevisionsToRestore(4)
+                                                     .build());
 
         try (JsonResourceSession session = database.beginResourceSession("res");
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-          final var pathToValue = io.brackit.query.util.path.Path.parse(
-              "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-          final IndexDef def = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+          final var pathToValue =
+              io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+          final IndexDef def =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
           ic.createIndexes(Set.of(def), wtx);
 
           // Rev 1: baseline
-          wtx.insertSubtreeAsFirstChild(
-              JsonShredder.createStringReader(buildCasArray(baseEntries, i -> i)),
+          wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(baseEntries, i -> i)),
               JsonNodeTrx.Commit.NO);
           wtx.commit();
 
@@ -469,8 +439,7 @@ final class HOTVersionedLeafStressTest {
               wtx.remove();
             }
             final int shift = rev * 10;
-            wtx.insertSubtreeAsFirstChild(
-                JsonShredder.createStringReader(buildCasArray(baseEntries, i -> i + shift)),
+            wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(baseEntries, i -> i + shift)),
                 JsonNodeTrx.Commit.NO);
             wtx.commit();
           }
@@ -499,20 +468,20 @@ final class HOTVersionedLeafStressTest {
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
         database.createResource(ResourceConfiguration.newBuilder("res")
-            .versioningApproach(VersioningType.DIFFERENTIAL)
-            .maxNumberOfRevisionsToRestore(2).build());
+                                                     .versioningApproach(VersioningType.DIFFERENTIAL)
+                                                     .maxNumberOfRevisionsToRestore(2)
+                                                     .build());
 
         try (JsonResourceSession session = database.beginResourceSession("res");
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-          final var pathToValue = io.brackit.query.util.path.Path.parse(
-              "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-          final IndexDef def = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+          final var pathToValue =
+              io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+          final IndexDef def =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
           ic.createIndexes(Set.of(def), wtx);
 
-          wtx.insertSubtreeAsFirstChild(
-              JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> i)),
+          wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> i)),
               JsonNodeTrx.Commit.NO);
           wtx.commit();
 
@@ -522,8 +491,7 @@ final class HOTVersionedLeafStressTest {
               wtx.remove();
             }
             final int base = (rev - 1) * 100;
-            wtx.insertSubtreeAsFirstChild(
-                JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> base + i)),
+            wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> base + i)),
                 JsonNodeTrx.Commit.NO);
             wtx.commit();
           }
@@ -533,8 +501,7 @@ final class HOTVersionedLeafStressTest {
         try (JsonResourceSession session = database.beginResourceSession("res")) {
           for (int rev = 1; rev <= totalRevs; rev++) {
             try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(rev)) {
-              assertNoViolations(rtx, IndexType.CAS, 0,
-                  "DIFFERENTIAL rev " + rev + " (maxRestore=2)");
+              assertNoViolations(rtx, IndexType.CAS, 0, "DIFFERENTIAL rev " + rev + " (maxRestore=2)");
             }
           }
         }
@@ -542,72 +509,66 @@ final class HOTVersionedLeafStressTest {
     }
   }
 
-    @Test
-    @DisplayName("SLIDING_SNAPSHOT with remove-and-reinsert, all historical revisions clean")
-    @org.junit.jupiter.api.Timeout(value = 180, unit = java.util.concurrent.TimeUnit.SECONDS)
-    void slidingSnapshotFragmentCombining() throws IOException {
-      final int entriesPerRev = 250;
-      final int totalRevs = 10;
-      final Path dbPath = tempDir.resolve("sliding-fragment-combine");
-      Databases.createJsonDatabase(new DatabaseConfiguration(dbPath));
+  @Test
+  @DisplayName("SLIDING_SNAPSHOT with remove-and-reinsert, all historical revisions clean")
+  @org.junit.jupiter.api.Timeout(value = 180, unit = java.util.concurrent.TimeUnit.SECONDS)
+  void slidingSnapshotFragmentCombining() throws IOException {
+    final int entriesPerRev = 250;
+    final int totalRevs = 10;
+    final Path dbPath = tempDir.resolve("sliding-fragment-combine");
+    Databases.createJsonDatabase(new DatabaseConfiguration(dbPath));
 
-      try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
-        database.createResource(ResourceConfiguration.newBuilder("res")
-            .versioningApproach(VersioningType.SLIDING_SNAPSHOT)
-            .maxNumberOfRevisionsToRestore(4).build());
+    try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
+      database.createResource(ResourceConfiguration.newBuilder("res")
+                                                   .versioningApproach(VersioningType.SLIDING_SNAPSHOT)
+                                                   .maxNumberOfRevisionsToRestore(4)
+                                                   .build());
 
-        try (JsonResourceSession session = database.beginResourceSession("res");
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
-          final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-          final var pathToValue = io.brackit.query.util.path.Path.parse(
-              "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-          final IndexDef def = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
-          ic.createIndexes(Set.of(def), wtx);
+      try (JsonResourceSession session = database.beginResourceSession("res");
+          JsonNodeTrx wtx = session.beginNodeTrx()) {
+        final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
+        final var pathToValue =
+            io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+        final IndexDef def =
+            IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+        ic.createIndexes(Set.of(def), wtx);
 
-          wtx.insertSubtreeAsFirstChild(
-              JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> i)),
+        wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> i)),
+            JsonNodeTrx.Commit.NO);
+        wtx.commit();
+
+        for (int rev = 2; rev <= totalRevs; rev++) {
+          wtx.moveToDocumentRoot();
+          if (wtx.moveToFirstChild()) {
+            wtx.remove();
+          }
+          final int shift = (rev - 1) * 50;
+          wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> shift + i)),
               JsonNodeTrx.Commit.NO);
           wtx.commit();
-
-          for (int rev = 2; rev <= totalRevs; rev++) {
-            wtx.moveToDocumentRoot();
-            if (wtx.moveToFirstChild()) {
-              wtx.remove();
-            }
-            final int shift = (rev - 1) * 50;
-            wtx.insertSubtreeAsFirstChild(
-                JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> shift + i)),
-                JsonNodeTrx.Commit.NO);
-            wtx.commit();
-          }
         }
+      }
 
-        try (JsonResourceSession session = database.beginResourceSession("res")) {
-          for (int rev = 1; rev <= totalRevs; rev++) {
-            try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(rev)) {
-              final HOTInvariantValidator.Result inv =
-                  HOTInvariantValidator.validateIndex(rtx.getStorageEngineReader(), IndexType.CAS, 0);
-              final long i1Count = inv.violations().stream()
-                  .filter(v -> v.invariant().startsWith("I1-cross-leaf")).count();
-              final long i11Count = inv.violations().stream()
-                  .filter(v -> v.invariant().startsWith("I11")).count();
-              System.out.println("[SLIDING_SNAPSHOT] rev=" + rev
-                  + " storedKeys=" + inv.storedKeyCount()
-                  + " violations=" + inv.violations().size()
-                  + " I1=" + i1Count + " I11=" + i11Count);
-              if (!inv.violations().isEmpty()) {
-                inv.violations().stream().limit(5)
-                    .forEach(v -> System.out.println("  " + v));
-              }
-              assertTrue(inv.violations().isEmpty(),
-                  "SLIDING_SNAPSHOT rev " + rev + " (maxRestore=4): " + inv.violations().size()
-                      + " violations (I1=" + i1Count + " I11=" + i11Count + ")");
+      try (JsonResourceSession session = database.beginResourceSession("res")) {
+        for (int rev = 1; rev <= totalRevs; rev++) {
+          try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(rev)) {
+            final HOTInvariantValidator.Result inv =
+                HOTInvariantValidator.validateIndex(rtx.getStorageEngineReader(), IndexType.CAS, 0);
+            final long i1Count =
+                inv.violations().stream().filter(v -> v.invariant().startsWith("I1-cross-leaf")).count();
+            final long i11Count = inv.violations().stream().filter(v -> v.invariant().startsWith("I11")).count();
+            System.out.println("[SLIDING_SNAPSHOT] rev=" + rev + " storedKeys=" + inv.storedKeyCount() + " violations="
+                + inv.violations().size() + " I1=" + i1Count + " I11=" + i11Count);
+            if (!inv.violations().isEmpty()) {
+              inv.violations().stream().limit(5).forEach(v -> System.out.println("  " + v));
             }
+            assertTrue(inv.violations().isEmpty(), "SLIDING_SNAPSHOT rev " + rev + " (maxRestore=4): "
+                + inv.violations().size() + " violations (I1=" + i1Count + " I11=" + i11Count + ")");
           }
         }
       }
     }
+  }
 
   // ============================================================
   // Multi-revision isolation: pinned reader vs active writer
@@ -626,30 +587,29 @@ final class HOTVersionedLeafStressTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(dbPath));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
-        database.createResource(ResourceConfiguration.newBuilder("res")
-            .versioningApproach(VersioningType.DIFFERENTIAL).build());
+        database.createResource(
+            ResourceConfiguration.newBuilder("res").versioningApproach(VersioningType.DIFFERENTIAL).build());
 
         // Rev 1: insert baseline using a wtx that we close immediately
         try (JsonResourceSession session = database.beginResourceSession("res");
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-          final var pathToValue = io.brackit.query.util.path.Path.parse(
-              "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-          final IndexDef def = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+          final var pathToValue =
+              io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+          final IndexDef def =
+              IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
           ic.createIndexes(Set.of(def), wtx);
-          wtx.insertSubtreeAsFirstChild(
-              JsonShredder.createStringReader(buildCasArray(n, i -> i)),
+          wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(n, i -> i)),
               JsonNodeTrx.Commit.NO);
           wtx.commit();
         }
 
         // Pin a reader to rev 1, then write rev 2 concurrently
         try (JsonResourceSession session = database.beginResourceSession("res");
-             JsonNodeReadOnlyTrx pinnedRtx = session.beginNodeReadOnlyTrx(1)) {
+            JsonNodeReadOnlyTrx pinnedRtx = session.beginNodeReadOnlyTrx(1)) {
 
-          final HOTInvariantValidator.Result invBefore = HOTInvariantValidator.validateIndex(
-              pinnedRtx.getStorageEngineReader(), IndexType.CAS, 0);
+          final HOTInvariantValidator.Result invBefore =
+              HOTInvariantValidator.validateIndex(pinnedRtx.getStorageEngineReader(), IndexType.CAS, 0);
           invBefore.assertOk();
           final int countBefore = invBefore.storedKeyCount();
 
@@ -659,15 +619,14 @@ final class HOTVersionedLeafStressTest {
             if (wtx.moveToFirstChild()) {
               wtx.remove();
             }
-            wtx.insertSubtreeAsFirstChild(
-                JsonShredder.createStringReader(buildCasArray(n / 2, i -> i + 100_000)),
+            wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(n / 2, i -> i + 100_000)),
                 JsonNodeTrx.Commit.NO);
             wtx.commit();
           }
 
           // Pinned reader should still see rev 1 data unchanged
-          final HOTInvariantValidator.Result invAfter = HOTInvariantValidator.validateIndex(
-              pinnedRtx.getStorageEngineReader(), IndexType.CAS, 0);
+          final HOTInvariantValidator.Result invAfter =
+              HOTInvariantValidator.validateIndex(pinnedRtx.getStorageEngineReader(), IndexType.CAS, 0);
           invAfter.assertOk();
           assertEquals(countBefore, invAfter.storedKeyCount(),
               "pinned reader's key count changed after writer committed rev 2");
@@ -675,7 +634,7 @@ final class HOTVersionedLeafStressTest {
 
         // Verify rev 2 independently
         try (JsonResourceSession session = database.beginResourceSession("res");
-             JsonNodeReadOnlyTrx rtx2 = session.beginNodeReadOnlyTrx(2)) {
+            JsonNodeReadOnlyTrx rtx2 = session.beginNodeReadOnlyTrx(2)) {
           assertNoViolations(rtx2, IndexType.CAS, 0, "rev2-independent");
         }
       }
@@ -697,18 +656,19 @@ final class HOTVersionedLeafStressTest {
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
         database.createResource(ResourceConfiguration.newBuilder("res")
-            .versioningApproach(VersioningType.DIFFERENTIAL)
-            .maxNumberOfRevisionsToRestore(3).build());
+                                                     .versioningApproach(VersioningType.DIFFERENTIAL)
+                                                     .maxNumberOfRevisionsToRestore(3)
+                                                     .build());
 
         // Build each revision in a separate wtx so we can validate cleanly
         try (JsonResourceSession session = database.beginResourceSession("res")) {
           // Rev 0: create index
           try (JsonNodeTrx wtx = session.beginNodeTrx()) {
             final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-            final var pathToValue = io.brackit.query.util.path.Path.parse(
-                "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-            def = IndexDefs.createCASIdxDef(false, Type.INR,
-                Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+            final var pathToValue =
+                io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+            def =
+                IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
             ic.createIndexes(Set.of(def), wtx);
 
             for (int rev = 1; rev <= totalRevs; rev++) {
@@ -725,8 +685,7 @@ final class HOTVersionedLeafStressTest {
                 oracle.merge(values[i], 1, Integer::sum);
               }
               wtx.insertSubtreeAsFirstChild(
-                  JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> values[i])),
-                  JsonNodeTrx.Commit.NO);
+                  JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> values[i])), JsonNodeTrx.Commit.NO);
               wtx.commit();
               oraclePerRev.add(oracle);
             }
@@ -736,8 +695,8 @@ final class HOTVersionedLeafStressTest {
 
           for (int rev = 1; rev <= totalRevs; rev++) {
             try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(rev)) {
-              final HOTInvariantValidator.Result inv = HOTInvariantValidator.validateIndex(
-                  rtx.getStorageEngineReader(), IndexType.CAS, 0);
+              final HOTInvariantValidator.Result inv =
+                  HOTInvariantValidator.validateIndex(rtx.getStorageEngineReader(), IndexType.CAS, 0);
               if (!inv.violations().isEmpty()) {
                 System.out.println("[oracle-fresh] rev " + rev + ": " + inv.violations().size() + " violations");
               } else {
@@ -752,32 +711,27 @@ final class HOTVersionedLeafStressTest {
         try (JsonResourceSession session = database.beginResourceSession("res")) {
           for (int rev = 1; rev <= totalRevs; rev++) {
             try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(rev)) {
-              assertNoViolations(rtx, IndexType.CAS, 0,
-                  "oracle-rev-" + rev + " (seed=" + seed + ")");
+              assertNoViolations(rtx, IndexType.CAS, 0, "oracle-rev-" + rev + " (seed=" + seed + ")");
             }
           }
 
           // Latest revision: oracle-correct range queries
           try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(totalRevs)) {
-            assertNoViolations(rtx, IndexType.CAS, 0,
-                "oracle-latest (seed=" + seed + ")");
+            assertNoViolations(rtx, IndexType.CAS, 0, "oracle-latest (seed=" + seed + ")");
 
             final TreeMap<Integer, Integer> oracle = oraclePerRev.get(totalRevs - 1);
             final var ic = session.getRtxIndexController(rtx.getRevisionNumber());
 
             for (int q = 0; q < 10; q++) {
               final int lo = queryRng.nextInt(5_000);
-              final long expected = oracle.tailMap(lo).values().stream()
-                  .mapToInt(Integer::intValue).sum();
-              final var iter = ic.openCASIndex(rtx.getStorageEngineReader(), def,
-                  ic.createCASFilter(Set.of("/k/[]/v"), new Int32(lo),
-                      SearchMode.GREATER_OR_EQUAL, new JsonPCRCollector(rtx)));
+              final long expected = oracle.tailMap(lo).values().stream().mapToInt(Integer::intValue).sum();
+              final var iter = ic.openCASIndex(rtx.getStorageEngineReader(), def, ic.createCASFilter(Set.of("/k/[]/v"),
+                  new Int32(lo), SearchMode.GREATER_OR_EQUAL, new JsonPCRCollector(rtx)));
               long actual = 0;
               while (iter.hasNext()) {
                 actual += iter.next().getNodeKeys().getLongCardinality();
               }
-              assertEquals(expected, actual,
-                  "range query lo=" + lo + " at latest rev (seed=" + seed + ")");
+              assertEquals(expected, actual, "range query lo=" + lo + " at latest rev (seed=" + seed + ")");
             }
           }
         }
@@ -801,18 +755,18 @@ final class HOTVersionedLeafStressTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(dbPath));
 
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
-        database.createResource(ResourceConfiguration.newBuilder("res")
-            .versioningApproach(VersioningType.DIFFERENTIAL).build());
+        database.createResource(
+            ResourceConfiguration.newBuilder("res").versioningApproach(VersioningType.DIFFERENTIAL).build());
 
         try (JsonResourceSession session = database.beginResourceSession("res");
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
           final IndexDef nameIdxDef = IndexDefs.createNameIdxDef(0, IndexDef.DbType.JSON);
           ic.createIndexes(Set.of(nameIdxDef), wtx);
 
           // Rev 1: object with repeated field names
-          wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(
-              "{\"alpha\": 1, \"beta\": 2, \"gamma\": 3, \"alpha\": 4, \"beta\": 5}"),
+          wtx.insertSubtreeAsFirstChild(
+              JsonShredder.createStringReader("{\"alpha\": 1, \"beta\": 2, \"gamma\": 3, \"alpha\": 4, \"beta\": 5}"),
               JsonNodeTrx.Commit.NO);
           wtx.commit();
           assertNoViolations(wtx, IndexType.NAME, nameIdxDef.getID(), "name-rev1");
@@ -822,8 +776,8 @@ final class HOTVersionedLeafStressTest {
           if (wtx.moveToFirstChild()) {
             wtx.remove();
           }
-          wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(
-              "{\"delta\": 10, \"epsilon\": 20, \"delta\": 30}"),
+          wtx.insertSubtreeAsFirstChild(
+              JsonShredder.createStringReader("{\"delta\": 10, \"epsilon\": 20, \"delta\": 30}"),
               JsonNodeTrx.Commit.NO);
           wtx.commit();
           assertNoViolations(wtx, IndexType.NAME, nameIdxDef.getID(), "name-rev2");
@@ -833,8 +787,8 @@ final class HOTVersionedLeafStressTest {
           if (wtx.moveToFirstChild()) {
             wtx.remove();
           }
-          wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(
-              "{\"alpha\": 100, \"beta\": 200, \"gamma\": 300, \"alpha\": 400, "
+          wtx.insertSubtreeAsFirstChild(
+              JsonShredder.createStringReader("{\"alpha\": 100, \"beta\": 200, \"gamma\": 300, \"alpha\": 400, "
                   + "\"beta\": 500, \"gamma\": 600, \"alpha\": 700}"),
               JsonNodeTrx.Commit.NO);
           wtx.commit();
@@ -843,9 +797,10 @@ final class HOTVersionedLeafStressTest {
 
         // Validate structural integrity at all 3 revisions from fresh rtx
         try (JsonResourceSession session = database.beginResourceSession("res")) {
+          final int nameIndexNumber = IndexDefs.createNameIdxDef(0, IndexDef.DbType.JSON).getID();
           for (int rev = 1; rev <= 3; rev++) {
             try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(rev)) {
-              assertNoViolations(rtx, IndexType.NAME, 0, "name-rev" + rev + "-cold");
+              assertNoViolations(rtx, IndexType.NAME, nameIndexNumber, "name-rev" + rev + "-cold");
             }
           }
 
@@ -853,8 +808,8 @@ final class HOTVersionedLeafStressTest {
           try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(3)) {
             final var ic = session.getRtxIndexController(rtx.getRevisionNumber());
             final IndexDef nameIdxDef = IndexDefs.createNameIdxDef(0, IndexDef.DbType.JSON);
-            final var iter = ic.openNameIndex(rtx.getStorageEngineReader(), nameIdxDef,
-                ic.createNameFilter(Set.of("alpha")));
+            final var iter =
+                ic.openNameIndex(rtx.getStorageEngineReader(), nameIdxDef, ic.createNameFilter(Set.of("alpha")));
             long alphaCount = 0;
             while (iter.hasNext()) {
               alphaCount += iter.next().getNodeKeys().getLongCardinality();
@@ -873,7 +828,8 @@ final class HOTVersionedLeafStressTest {
   private static String buildCasArray(int n, java.util.function.IntUnaryOperator valueAt) {
     final StringBuilder json = new StringBuilder("{\"k\":[");
     for (int i = 0; i < n; i++) {
-      if (i > 0) json.append(',');
+      if (i > 0)
+        json.append(',');
       json.append("{\"v\":").append(valueAt.applyAsInt(i)).append('}');
     }
     json.append("]}");
@@ -881,42 +837,40 @@ final class HOTVersionedLeafStressTest {
   }
 
   /** Pick the soak payload: CAS values on {@code /k/[]/v}, or varying object key names. */
-  private static String buildSoakArray(int n, java.util.function.IntUnaryOperator mapAt,
-      boolean nameIndex) {
-    return nameIndex ? buildNameArray(n, mapAt) : buildCasArray(n, mapAt);
+  private static String buildSoakArray(int n, java.util.function.IntUnaryOperator mapAt, boolean nameIndex) {
+    return nameIndex
+        ? buildNameArray(n, mapAt)
+        : buildCasArray(n, mapAt);
   }
 
   /**
    * Build {@code {"k":[{"f<x>":0}, ...]}} where {@code x} is the mapping value masked to 1024
    * distinct field names. Churns the JSON name index ({@link IndexType#NAME}) across overlapping-
    * then-shifting name classes (NameKeySerializer composite keys: nameClass || nodeKey), a key bit
-   * layout distinct from the CAS payload. Node keys grow document-globally, so this still crosses
-   * the chunkIdx>=1 boundary the structural handlers must survive.
+   * layout distinct from the CAS payload. Node keys grow document-globally, so this still crosses the
+   * chunkIdx>=1 boundary the structural handlers must survive.
    */
   private static String buildNameArray(int n, java.util.function.IntUnaryOperator mapAt) {
     final StringBuilder json = new StringBuilder("{\"k\":[");
     for (int i = 0; i < n; i++) {
-      if (i > 0) json.append(',');
+      if (i > 0)
+        json.append(',');
       json.append("{\"f").append(mapAt.applyAsInt(i) & 0x3FF).append("\":0}");
     }
     json.append("]}");
     return json.toString();
   }
 
-  private static void assertNoViolations(JsonNodeTrx wtx, IndexType indexType,
-      int indexId, String label) {
-    final HOTInvariantValidator.Result inv = HOTInvariantValidator.validateIndex(
-        wtx.getStorageEngineReader(), indexType, indexId);
-    assertTrue(inv.violations().isEmpty(),
-        "[" + label + "] structural violations: " + inv.violations());
+  private static void assertNoViolations(JsonNodeTrx wtx, IndexType indexType, int indexId, String label) {
+    final HOTInvariantValidator.Result inv =
+        HOTInvariantValidator.validateIndex(wtx.getStorageEngineReader(), indexType, indexId);
+    assertTrue(inv.violations().isEmpty(), "[" + label + "] structural violations: " + inv.violations());
   }
 
-  private static void assertNoViolations(JsonNodeReadOnlyTrx rtx, IndexType indexType,
-      int indexId, String label) {
-    final HOTInvariantValidator.Result inv = HOTInvariantValidator.validateIndex(
-        rtx.getStorageEngineReader(), indexType, indexId);
-    assertTrue(inv.violations().isEmpty(),
-        "[" + label + "] structural violations: " + inv.violations());
+  private static void assertNoViolations(JsonNodeReadOnlyTrx rtx, IndexType indexType, int indexId, String label) {
+    final HOTInvariantValidator.Result inv =
+        HOTInvariantValidator.validateIndex(rtx.getStorageEngineReader(), indexType, indexId);
+    assertTrue(inv.violations().isEmpty(), "[" + label + "] structural violations: " + inv.violations());
   }
 
   @Test
@@ -930,16 +884,17 @@ final class HOTVersionedLeafStressTest {
 
     try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
       database.createResource(ResourceConfiguration.newBuilder("res")
-          .versioningApproach(VersioningType.DIFFERENTIAL)
-          .maxNumberOfRevisionsToRestore(3).build());
+                                                   .versioningApproach(VersioningType.DIFFERENTIAL)
+                                                   .maxNumberOfRevisionsToRestore(3)
+                                                   .build());
 
       try (JsonResourceSession session = database.beginResourceSession("res");
-           JsonNodeTrx wtx = session.beginNodeTrx()) {
+          JsonNodeTrx wtx = session.beginNodeTrx()) {
         final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-        final var pathToValue = io.brackit.query.util.path.Path.parse(
-            "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-        final IndexDef def = IndexDefs.createCASIdxDef(false, Type.INR,
-            Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+        final var pathToValue =
+            io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+        final IndexDef def =
+            IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
         ic.createIndexes(Set.of(def), wtx);
 
         for (int rev = 1; rev <= totalRevs; rev++) {
@@ -950,8 +905,7 @@ final class HOTVersionedLeafStressTest {
             }
           }
           final int base = (rev - 1) * 100;
-          wtx.insertSubtreeAsFirstChild(
-              JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> i + base)),
+          wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> i + base)),
               JsonNodeTrx.Commit.NO);
           wtx.commit();
         }
@@ -962,18 +916,28 @@ final class HOTVersionedLeafStressTest {
           try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(rev)) {
             final var reader = rtx.getStorageEngineReader();
             final PageReference rootRef = HOTInvariantValidator.resolveRootRef(reader, IndexType.CAS, 0);
-            System.out.println("[diag] rev " + rev + " CAS root ref key=" + (rootRef != null ? rootRef.getKey() : "null")
-                + " fragments=" + (rootRef != null ? rootRef.getPageFragments().size() : 0));
+            System.out.println("[diag] rev " + rev + " CAS root ref key=" + (rootRef != null
+                ? rootRef.getKey()
+                : "null") + " fragments="
+                + (rootRef != null
+                    ? rootRef.getPageFragments().size()
+                    : 0));
             if (rootRef != null) {
               final io.sirix.page.interfaces.Page rootPage = reader.loadHOTPage(rootRef);
-              System.out.println("[diag] rev " + rev + " root page type=" + (rootPage != null ? rootPage.getClass().getSimpleName() : "null"));
+              System.out.println("[diag] rev " + rev + " root page type=" + (rootPage != null
+                  ? rootPage.getClass().getSimpleName()
+                  : "null"));
               if (rootPage instanceof HOTIndirectPage hip) {
-                System.out.println("[diag] rev " + rev + " root indirect: children=" + hip.getNumChildren()
-                    + " height=" + hip.getHeight());
+                System.out.println("[diag] rev " + rev + " root indirect: children=" + hip.getNumChildren() + " height="
+                    + hip.getHeight());
                 for (int c = 0; c < hip.getNumChildren(); c++) {
                   final PageReference childRef = hip.getChildReference(c);
-                  System.out.println("[diag]   child " + c + " key=" + (childRef != null ? childRef.getKey() : "null")
-                      + " fragments=" + (childRef != null ? childRef.getPageFragments().size() : 0));
+                  System.out.println("[diag]   child " + c + " key=" + (childRef != null
+                      ? childRef.getKey()
+                      : "null") + " fragments="
+                      + (childRef != null
+                          ? childRef.getPageFragments().size()
+                          : 0));
                 }
               }
             }
@@ -996,16 +960,15 @@ final class HOTVersionedLeafStressTest {
     Databases.createJsonDatabase(new DatabaseConfiguration(dbPath));
 
     try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
-      database.createResource(ResourceConfiguration.newBuilder("res")
-          .versioningApproach(VersioningType.FULL).build());
+      database.createResource(ResourceConfiguration.newBuilder("res").versioningApproach(VersioningType.FULL).build());
 
       try (JsonResourceSession session = database.beginResourceSession("res");
-           JsonNodeTrx wtx = session.beginNodeTrx()) {
+          JsonNodeTrx wtx = session.beginNodeTrx()) {
         final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-        final var pathToValue = io.brackit.query.util.path.Path.parse(
-            "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-        final IndexDef def = IndexDefs.createCASIdxDef(false, Type.INR,
-            Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+        final var pathToValue =
+            io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+        final IndexDef def =
+            IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
         ic.createIndexes(Set.of(def), wtx);
 
         for (int rev = 1; rev <= totalRevs; rev++) {
@@ -1019,8 +982,7 @@ final class HOTVersionedLeafStressTest {
           for (int i = 0; i < entriesPerRev; i++) {
             values[i] = rng.nextInt(5_000);
           }
-          wtx.insertSubtreeAsFirstChild(
-              JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> values[i])),
+          wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> values[i])),
               JsonNodeTrx.Commit.NO);
           wtx.commit();
         }
@@ -1029,8 +991,7 @@ final class HOTVersionedLeafStressTest {
       try (JsonResourceSession session = database.beginResourceSession("res")) {
         for (int rev = 1; rev <= totalRevs; rev++) {
           try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(rev)) {
-            assertNoViolations(rtx, IndexType.CAS, 0,
-                "FULL rev " + rev + " (seed=" + seed + ")");
+            assertNoViolations(rtx, IndexType.CAS, 0, "FULL rev " + rev + " (seed=" + seed + ")");
           }
         }
       }
@@ -1049,20 +1010,18 @@ final class HOTVersionedLeafStressTest {
     Databases.createJsonDatabase(new DatabaseConfiguration(dbPath));
 
     try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
-      database.createResource(ResourceConfiguration.newBuilder("res")
-          .versioningApproach(VersioningType.FULL).build());
+      database.createResource(ResourceConfiguration.newBuilder("res").versioningApproach(VersioningType.FULL).build());
 
       try (JsonResourceSession session = database.beginResourceSession("res");
-           JsonNodeTrx wtx = session.beginNodeTrx()) {
+          JsonNodeTrx wtx = session.beginNodeTrx()) {
         final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-        final var pathToValue = io.brackit.query.util.path.Path.parse(
-            "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-        final IndexDef def = IndexDefs.createCASIdxDef(false, Type.INR,
-            Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+        final var pathToValue =
+            io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+        final IndexDef def =
+            IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
         ic.createIndexes(Set.of(def), wtx);
 
-        wtx.insertSubtreeAsFirstChild(
-            JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> i)),
+        wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> i)),
             JsonNodeTrx.Commit.NO);
         wtx.commit();
         assertNoViolations(wtx, IndexType.CAS, def.getID(), "minimal rev1 post-commit");
@@ -1077,8 +1036,7 @@ final class HOTVersionedLeafStressTest {
           for (int i = 0; i < entriesPerRev; i++) {
             values[i] = offset + rng.nextInt(entriesPerRev * 2);
           }
-          wtx.insertSubtreeAsFirstChild(
-              JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> values[i])),
+          wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(entriesPerRev, i -> values[i])),
               JsonNodeTrx.Commit.NO);
           assertNoViolations(wtx, IndexType.CAS, def.getID(), "minimal rev" + rev + " pre-commit");
           wtx.commit();
@@ -1092,8 +1050,8 @@ final class HOTVersionedLeafStressTest {
   @DisplayName("Aggressive fuzz: 8 seeds x 20 revs, varied value distributions, strict validate + oracle retrievability")
   @org.junit.jupiter.api.Timeout(value = 600, unit = java.util.concurrent.TimeUnit.SECONDS)
   void aggressiveInterleaveFuzz() throws IOException {
-    final long[] seeds = {0xCAFEBABEL, 0xDEADBEEFL, 0xFEEDFACEL, 0x12345678L,
-        0x0L, 0xFFFFFFFFL, 0xA5A5A5A5L, 0x5EED5EEDL};
+    final long[] seeds =
+        {0xCAFEBABEL, 0xDEADBEEFL, 0xFEEDFACEL, 0x12345678L, 0x0L, 0xFFFFFFFFL, 0xA5A5A5A5L, 0x5EED5EEDL};
     final int totalRevs = 20;
     for (final long seed : seeds) {
       final Random rng = new Random(seed);
@@ -1101,17 +1059,17 @@ final class HOTVersionedLeafStressTest {
       Databases.createJsonDatabase(new DatabaseConfiguration(dbPath));
       try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
         database.createResource(ResourceConfiguration.newBuilder("res")
-            .versioningApproach(VersioningType.SLIDING_SNAPSHOT)
-            .maxNumberOfRevisionsToRestore(5).build());
+                                                     .versioningApproach(VersioningType.SLIDING_SNAPSHOT)
+                                                     .maxNumberOfRevisionsToRestore(5)
+                                                     .build());
         final IndexDef def;
         final TreeMap<Integer, Integer> lastOracle = new TreeMap<>();
         try (JsonResourceSession session = database.beginResourceSession("res");
-             JsonNodeTrx wtx = session.beginNodeTrx()) {
+            JsonNodeTrx wtx = session.beginNodeTrx()) {
           final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-          final var pathToValue = io.brackit.query.util.path.Path.parse(
-              "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-          def = IndexDefs.createCASIdxDef(false, Type.INR,
-              Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+          final var pathToValue =
+              io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+          def = IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
           ic.createIndexes(Set.of(def), wtx);
 
           for (int rev = 1; rev <= totalRevs; rev++) {
@@ -1121,7 +1079,7 @@ final class HOTVersionedLeafStressTest {
                 wtx.remove();
               }
             }
-            final int per = 1000 + rng.nextInt(2001);          // 1000..3000
+            final int per = 1000 + rng.nextInt(2001); // 1000..3000
             final int shape = rng.nextInt(5);
             final int span = 500 + rng.nextInt(6000);
             final int base = rng.nextInt(8000);
@@ -1129,17 +1087,16 @@ final class HOTVersionedLeafStressTest {
             final TreeMap<Integer, Integer> oracle = new TreeMap<>();
             for (int i = 0; i < per; i++) {
               final int v = switch (shape) {
-                case 0 -> base + i;                                  // ascending
-                case 1 -> base + (per - i);                          // descending
-                case 2 -> base + rng.nextInt(span);                  // random window
-                case 3 -> base + (rng.nextInt(span) & ~0x3F);        // clustered (low bits zeroed)
+                case 0 -> base + i; // ascending
+                case 1 -> base + (per - i); // descending
+                case 2 -> base + rng.nextInt(span); // random window
+                case 3 -> base + (rng.nextInt(span) & ~0x3F); // clustered (low bits zeroed)
                 default -> base + rng.nextInt(Math.max(1, per / 8)); // duplicate-heavy
               };
               values[i] = Math.max(0, v);
               oracle.merge(values[i], 1, Integer::sum);
             }
-            wtx.insertSubtreeAsFirstChild(
-                JsonShredder.createStringReader(buildCasArray(per, i -> values[i])),
+            wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(per, i -> values[i])),
                 JsonNodeTrx.Commit.NO);
             assertNoViolations(wtx, IndexType.CAS, def.getID(),
                 "aggr seed=" + Long.toHexString(seed) + " rev=" + rev + " pre-commit");
@@ -1160,8 +1117,8 @@ final class HOTVersionedLeafStressTest {
           }
           try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(totalRevs)) {
             final var ic = session.getRtxIndexController(rtx.getRevisionNumber());
-            final var casFilter = ic.createCASFilter(Set.of("/k/[]/v"), new Int32(0),
-                SearchMode.GREATER_OR_EQUAL, new JsonPCRCollector(rtx));
+            final var casFilter = ic.createCASFilter(Set.of("/k/[]/v"), new Int32(0), SearchMode.GREATER_OR_EQUAL,
+                new JsonPCRCollector(rtx));
             final var iter = ic.openCASIndex(rtx.getStorageEngineReader(), def, casFilter);
             long totalActual = 0;
             while (iter.hasNext()) {
@@ -1180,24 +1137,21 @@ final class HOTVersionedLeafStressTest {
   @DisplayName("ChunkIdx boundary: >65536 nodes, multi-chunk per value, full retrievability")
   @org.junit.jupiter.api.Timeout(value = 300, unit = java.util.concurrent.TimeUnit.SECONDS)
   void chunkIdxBoundaryRetrievability() throws IOException {
-    final int n = 90_000;       // nodeKeys exceed 65536 -> chunkIdx >= 1
-    final int distinct = 250;   // each value repeats ~360x -> its nodeKeys span chunk 0 and 1
+    final int n = 90_000; // nodeKeys exceed 65536 -> chunkIdx >= 1
+    final int distinct = 250; // each value repeats ~360x -> its nodeKeys span chunk 0 and 1
     final Path dbPath = tempDir.resolve("chunkidx-boundary");
     Databases.createJsonDatabase(new DatabaseConfiguration(dbPath));
     try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
-      database.createResource(ResourceConfiguration.newBuilder("res")
-          .versioningApproach(VersioningType.FULL).build());
+      database.createResource(ResourceConfiguration.newBuilder("res").versioningApproach(VersioningType.FULL).build());
       final IndexDef def;
       try (JsonResourceSession session = database.beginResourceSession("res");
-           JsonNodeTrx wtx = session.beginNodeTrx()) {
+          JsonNodeTrx wtx = session.beginNodeTrx()) {
         final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-        final var pathToValue = io.brackit.query.util.path.Path.parse(
-            "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-        def = IndexDefs.createCASIdxDef(false, Type.INR,
-            Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+        final var pathToValue =
+            io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+        def = IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
         ic.createIndexes(Set.of(def), wtx);
-        wtx.insertSubtreeAsFirstChild(
-            JsonShredder.createStringReader(buildCasArray(n, i -> i % distinct)),
+        wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(n, i -> i % distinct)),
             JsonNodeTrx.Commit.NO);
         wtx.commit();
         assertNoViolations(wtx, IndexType.CAS, def.getID(), "chunkidx post-commit");
@@ -1215,30 +1169,27 @@ final class HOTVersionedLeafStressTest {
     final Random rng = new Random(0xBEEFCAFEL);
     final int[] values = new int[n];
     for (int i = 0; i < n; i++) {
-      values[i] = rng.nextInt(1_000_000);   // wide, mostly-distinct -> branch-heavy tree growth
+      values[i] = rng.nextInt(1_000_000); // wide, mostly-distinct -> branch-heavy tree growth
     }
     final Path dbPath = tempDir.resolve("guard-bench");
     Databases.createJsonDatabase(new DatabaseConfiguration(dbPath));
     try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
-      database.createResource(ResourceConfiguration.newBuilder("res")
-          .versioningApproach(VersioningType.FULL).build());
+      database.createResource(ResourceConfiguration.newBuilder("res").versioningApproach(VersioningType.FULL).build());
       final IndexDef def;
       try (JsonResourceSession session = database.beginResourceSession("res");
-           JsonNodeTrx wtx = session.beginNodeTrx()) {
+          JsonNodeTrx wtx = session.beginNodeTrx()) {
         final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
-        final var pathToValue = io.brackit.query.util.path.Path.parse(
-            "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-        def = IndexDefs.createCASIdxDef(false, Type.INR,
-            Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+        final var pathToValue =
+            io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+        def = IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
         ic.createIndexes(Set.of(def), wtx);
         final long start = System.nanoTime();
-        wtx.insertSubtreeAsFirstChild(
-            JsonShredder.createStringReader(buildCasArray(n, i -> values[i])),
+        wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildCasArray(n, i -> values[i])),
             JsonNodeTrx.Commit.NO);
         wtx.commit();
         final long elapsedMs = (System.nanoTime() - start) / 1_000_000L;
-        System.out.println("[guard-bench] inserted " + n + " CAS entries in " + elapsedMs
-            + " ms (" + (n * 1000L / Math.max(1L, elapsedMs)) + " entries/s)");
+        System.out.println("[guard-bench] inserted " + n + " CAS entries in " + elapsedMs + " ms ("
+            + (n * 1000L / Math.max(1L, elapsedMs)) + " entries/s)");
         // An O(N^2) guard would blow the 180s timeout well before this; reaching it rules that out.
         assertNoViolations(wtx, IndexType.CAS, def.getID(), "guard-bench post-commit");
       }
@@ -1265,26 +1216,25 @@ final class HOTVersionedLeafStressTest {
     // chunkIdx>=1 because node keys grow document-globally regardless of the value/name payload.
     final String indexMode = System.getProperty("hot.soak.index", "cas");
     final boolean nameIndex = "name".equals(indexMode);
-    final IndexType idxType = nameIndex ? IndexType.NAME : IndexType.CAS;
+    final IndexType idxType = nameIndex
+        ? IndexType.NAME
+        : IndexType.CAS;
     final Path dbPath = tempDir.resolve("soak");
     Databases.createJsonDatabase(new DatabaseConfiguration(dbPath));
 
     final java.util.concurrent.ConcurrentLinkedQueue<Throwable> readerErrors =
         new java.util.concurrent.ConcurrentLinkedQueue<>();
-    final java.util.concurrent.atomic.AtomicInteger lastCommittedRev =
-        new java.util.concurrent.atomic.AtomicInteger(0);
-    final java.util.concurrent.atomic.AtomicBoolean writerDone =
-        new java.util.concurrent.atomic.AtomicBoolean(false);
-    final java.util.concurrent.atomic.AtomicLong readerIterations =
-        new java.util.concurrent.atomic.AtomicLong();
-    final java.util.concurrent.atomic.AtomicLong readerValidations =
-        new java.util.concurrent.atomic.AtomicLong();
+    final java.util.concurrent.atomic.AtomicInteger lastCommittedRev = new java.util.concurrent.atomic.AtomicInteger(0);
+    final java.util.concurrent.atomic.AtomicBoolean writerDone = new java.util.concurrent.atomic.AtomicBoolean(false);
+    final java.util.concurrent.atomic.AtomicLong readerIterations = new java.util.concurrent.atomic.AtomicLong();
+    final java.util.concurrent.atomic.AtomicLong readerValidations = new java.util.concurrent.atomic.AtomicLong();
 
     final long startMs = System.currentTimeMillis();
     try (Database<JsonResourceSession> database = Databases.openJsonDatabase(dbPath)) {
       database.createResource(ResourceConfiguration.newBuilder("res")
-          .versioningApproach(VersioningType.SLIDING_SNAPSHOT)
-          .maxNumberOfRevisionsToRestore(5).build());
+                                                   .versioningApproach(VersioningType.SLIDING_SNAPSHOT)
+                                                   .maxNumberOfRevisionsToRestore(5)
+                                                   .build());
 
       final IndexDef def;
       try (JsonResourceSession session = database.beginResourceSession("res")) {
@@ -1295,14 +1245,13 @@ final class HOTVersionedLeafStressTest {
           if (nameIndex) {
             def = IndexDefs.createNameIdxDef(0, IndexDef.DbType.JSON);
           } else {
-            final var pathToValue = io.brackit.query.util.path.Path.parse(
-                "/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
-            def = IndexDefs.createCASIdxDef(false, Type.INR,
-                Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+            final var pathToValue =
+                io.brackit.query.util.path.Path.parse("/k/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+            def =
+                IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
           }
           ic.createIndexes(Set.of(def), wtx);
-          wtx.insertSubtreeAsFirstChild(
-              JsonShredder.createStringReader(buildSoakArray(perRev, i -> i, nameIndex)),
+          wtx.insertSubtreeAsFirstChild(JsonShredder.createStringReader(buildSoakArray(perRev, i -> i, nameIndex)),
               JsonNodeTrx.Commit.NO);
           wtx.commit();
           lastCommittedRev.set(1);
@@ -1321,11 +1270,11 @@ final class HOTVersionedLeafStressTest {
                 if (hi < 1) {
                   continue;
                 }
-                final int window = Math.min(hi, 30);  // recent-biased: race on fresh commits
+                final int window = Math.min(hi, 30); // recent-biased: race on fresh commits
                 final int rev = hi - rrng.nextInt(window);
                 try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(rev)) {
-                  final HOTInvariantValidator.Result inv = HOTInvariantValidator.validateIndex(
-                      rtx.getStorageEngineReader(), idxType, 0);
+                  final HOTInvariantValidator.Result inv =
+                      HOTInvariantValidator.validateIndex(rtx.getStorageEngineReader(), idxType, 0);
                   if (!inv.violations().isEmpty()) {
                     throw new AssertionError("reader rev " + rev + " violations: " + inv.violations());
                   }
@@ -1355,14 +1304,13 @@ final class HOTVersionedLeafStressTest {
             wtx.commit();
             lastCommittedRev.set(rev);
             if (rev % validateEvery == 0) {
-              final HOTInvariantValidator.Result inv = HOTInvariantValidator.validateIndex(
-                  wtx.getStorageEngineReader(), idxType, def.getID());
-              assertTrue(inv.violations().isEmpty(),
-                  "writer rev " + rev + " violations: " + inv.violations());
+              final HOTInvariantValidator.Result inv =
+                  HOTInvariantValidator.validateIndex(wtx.getStorageEngineReader(), idxType, def.getID());
+              assertTrue(inv.violations().isEmpty(), "writer rev " + rev + " violations: " + inv.violations());
               final long elapsed = (System.currentTimeMillis() - startMs) / 1000;
-              System.out.println("[soak] rev=" + rev + "/" + revs + " elapsed=" + elapsed + "s"
-                  + " readerIters=" + readerIterations.get() + " readerValids=" + readerValidations.get()
-                  + " readerErrors=" + readerErrors.size());
+              System.out.println("[soak] rev=" + rev + "/" + revs + " elapsed=" + elapsed + "s" + " readerIters="
+                  + readerIterations.get() + " readerValids=" + readerValidations.get() + " readerErrors="
+                  + readerErrors.size());
             }
           }
           writerDone.set(true);
@@ -1370,9 +1318,8 @@ final class HOTVersionedLeafStressTest {
           if (!pool.awaitTermination(120, java.util.concurrent.TimeUnit.SECONDS)) {
             pool.shutdownNow();
           }
-          assertTrue(readerErrors.isEmpty(),
-              "concurrent reader errors (" + readerErrors.size() + "): " + readerErrors.stream()
-                  .map(Throwable::toString).limit(5).toList());
+          assertTrue(readerErrors.isEmpty(), "concurrent reader errors (" + readerErrors.size() + "): "
+              + readerErrors.stream().map(Throwable::toString).limit(5).toList());
         }
 
         // Final cold-cache validation at a spread of revisions (wtx closed).
@@ -1385,42 +1332,38 @@ final class HOTVersionedLeafStressTest {
             continue;
           }
           try (JsonNodeReadOnlyTrx rtx = session.beginNodeReadOnlyTrx(rev)) {
-            final HOTInvariantValidator.Result inv = HOTInvariantValidator.validateIndex(
-                rtx.getStorageEngineReader(), idxType, 0);
-            assertTrue(inv.violations().isEmpty(),
-                "final cold-cache rev " + rev + " violations: " + inv.violations());
+            final HOTInvariantValidator.Result inv =
+                HOTInvariantValidator.validateIndex(rtx.getStorageEngineReader(), idxType, 0);
+            assertTrue(inv.violations().isEmpty(), "final cold-cache rev " + rev + " violations: " + inv.violations());
             if (rev == committed) {
               finalHeight = inv.observedHeight();
               finalKeys = inv.storedKeyCount();
             }
           }
         }
-        System.out.println("[soak] height at rev=" + committed + ": observedHeight=" + finalHeight
-            + " storedKeys=" + finalKeys + " (ideal ~log_512(keys)="
+        System.out.println("[soak] height at rev=" + committed + ": observedHeight=" + finalHeight + " storedKeys="
+            + finalKeys + " (ideal ~log_512(keys)="
             + String.format("%.2f", Math.log(Math.max(1, finalKeys)) / Math.log(512)) + ")");
-        System.out.println("[soak] DONE revs=" + committed + " perRev=" + perRev
-            + " totalInserted=" + ((long) committed * perRev) + " readerIters=" + readerIterations.get()
-            + " readerValids=" + readerValidations.get() + " readerErrors=" + readerErrors.size()
-            + " elapsed=" + ((System.currentTimeMillis() - startMs) / 1000) + "s");
-        System.out.println("[soak] rebuilds BRANCH_I8_UNSAFE_REBUILD="
-            + AbstractHOTIndexWriter.BRANCH_I8_UNSAFE_REBUILD.get()
-            + " STRUCTURAL_SELFHEAL_REBUILD=" + AbstractHOTIndexWriter.STRUCTURAL_SELFHEAL_REBUILD.get()
-            + " REBUILD_SUBTREE_CALLED=" + AbstractHOTIndexWriter.REBUILD_SUBTREE_CALLED.get()
-            + " STRAND_LEAF_REBUILD=" + AbstractHOTIndexWriter.STRAND_LEAF_REBUILD.get()
-            + " STRAND_TWO_LEAF_MIGRATE=" + AbstractHOTIndexWriter.STRAND_TWO_LEAF_MIGRATE.get()
-            + " STRAND_FULL_FALLBACK=" + AbstractHOTIndexWriter.STRAND_FULL_FALLBACK.get()
-            + " DIRECTION_ONE_FALLBACK=" + AbstractHOTIndexWriter.DIRECTION_ONE_FALLBACK.get()
-            + " totalInserts=" + ((long) committed * perRev));
+        System.out.println("[soak] DONE revs=" + committed + " perRev=" + perRev + " totalInserted="
+            + ((long) committed * perRev) + " readerIters=" + readerIterations.get() + " readerValids="
+            + readerValidations.get() + " readerErrors=" + readerErrors.size() + " elapsed="
+            + ((System.currentTimeMillis() - startMs) / 1000) + "s");
+        System.out.println("[soak] structural BRANCH_COMPLETE_FRONTIER="
+            + AbstractHOTIndexWriter.BRANCH_COMPLETE_FRONTIER.get() + " STRUCTURAL_VALIDATION_FAILURE="
+            + AbstractHOTIndexWriter.STRUCTURAL_VALIDATION_FAILURE.get() + " COMPLETE_STRUCTURAL_FRONTIER_SPLICE="
+            + AbstractHOTIndexWriter.COMPLETE_STRUCTURAL_FRONTIER_SPLICE.get() + " STRAND_TWO_LEAF_MIGRATE="
+            + AbstractHOTIndexWriter.STRAND_TWO_LEAF_MIGRATE.get() + " STRAND_COMPLETE_FRONTIER="
+            + AbstractHOTIndexWriter.STRAND_COMPLETE_FRONTIER.get() + " DIRECTION_ONE_FALLBACK="
+            + AbstractHOTIndexWriter.DIRECTION_ONE_FALLBACK.get() + " totalInserts=" + ((long) committed * perRev));
       }
     }
   }
 
-  private static long countCasRange(JsonNodeTrx wtx, JsonResourceSession session,
-      IndexDef def, int lowerBound, SearchMode mode) {
+  private static long countCasRange(JsonNodeTrx wtx, JsonResourceSession session, IndexDef def, int lowerBound,
+      SearchMode mode) {
     final var ic = session.getWtxIndexController(wtx.getRevisionNumber());
     final var iter = ic.openCASIndex(wtx.getStorageEngineReader(), def,
-        ic.createCASFilter(Set.of("/k/[]/v"), new Int32(lowerBound), mode,
-            new JsonPCRCollector(wtx)));
+        ic.createCASFilter(Set.of("/k/[]/v"), new Int32(lowerBound), mode, new JsonPCRCollector(wtx)));
     long count = 0;
     while (iter.hasNext()) {
       count += iter.next().getNodeKeys().getLongCardinality();
